infrastructure/dus-template.yaml
AWSTemplateFormatVersion: 2010-09-09

#####################
# Resources
#####################

Resources:
  DusInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0fc5d935ebf8bc3bc # Ubuntu Server 22.04 LTS (HVM) SSD
      InstanceType: t3a.large
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 93
            VolumeType: gp3
            DeleteOnTermination: yes
            Encrypted: false
      EbsOptimized: true
      Monitoring: false
      KeyName: efflux-dus
      SecurityGroupIds:
        - !Ref DusSecurityGroup
      SubnetId: !ImportValue Efflux-PublicSubnet1
      Tags:
        - Key: Name
          Value: Efflux-DUS Instance
        - Key: project
          Value: efflux
        - Key: component
          Value: dus

  # add an elastic IP to the MetaBase instance
  DusEIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref DusInstance
      Domain: standard
      Tags:
        - Key: Name
          Value: EffluxDusIP
        - Key: project
          Value: efflux
        - Key: component
          Value: dus

  # Create a MetaBase Security Group
  DusSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Efflux-DUS
      GroupDescription: Security Group for Efflux DUS
      VpcId: !ImportValue Efflux-VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Efflux-DUS
        - Key: project
          Value: efflux
        - Key: operation
          Value: analytics

####################
# Outputs
####################

Outputs:
  DusInstance:
    Description: Efflux DUS Instance
    Value: !Ref DusInstance
  DusEIP:
    Description: Efflux DUS Elastic IP
    Value: !Ref DusEIP
